--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,40 @@
     <link rel="stylesheet" href="./assets/css/app.css" />
   </head>
   <body>
-    <div class="container d-flex align-items-center flex-column text-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container d-flex justify-content-between">
+        <a class="navbar-brand fw-bold primary-color" href="#">
+          زَكـــــــــــــــــــاةُ الْمَال
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">زكاة الذهب والفضة</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">زكاة الزروع والثمار</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">زكاة الأنعام</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div
+      class="container d-flex align-items-center flex-column text-center mainApp"
+    >
       <img src="./assets/images/zakat-upload.png" alt="" class="w-25" />
       <h1 class="primary-color fw-bold fs-2">
         زَكـــــــــــــــــــاةُ الْمَال
@@ -16,7 +49,7 @@
       <p class="text-color fw-bold mt-2">
         تطبيق ويب مبسط يقدم مستحقات الزكاة من المال، مقدم مجانا للمستفيدين.
       </p>
-      <form class="d-flex align-items-center justify-content-center">
+      <form class="d-flex align-items-center justify-content-center mt-3">
         <button
           id="mainButton"
           class="btn btn-primary secondary-background border-0 ms-3"
@@ -44,28 +77,27 @@
               id="sendNumber"
             ></th>
             <td class="font-weight-bold" style="font-size: 15px">2.5%</td>
-            <td class="text-danger font-weight-bold" id="finalAmount"></td>
+            <td class="text-danger font-weight-bold" id="amount"></td>
           </tr>
         </tbody>
       </table>
-      <p id="wrong"></p>
-      <div class="copyrights mt-4">
-        <h3
-          class="d-flex justify-content-center align-items-center primary-color"
-        >
-          المشروع مفتوح المصدر ويمكنك الإطلاع عليه من على
-          <a href="" class="d-inline-flex align-items-center">
-            <img
-              class="img-fluid me-1"
-              src="./assets/icons/github.svg"
-              alt="github logo"
-              style="width: 23px"
-            />
-          </a>
-        </h3>
 
-        <p>أحدى مشاريع الشيخ المختار</p>
+      <p id="wrong"></p>
+      <div
+        class="openSrouce mt-5 d-flex align-items-center justify-content-center"
+      >
+        <h5>
+          المشروع مفتوح المصدر ويمكنك الإطلاع عليه من على
+          <a href="" class="text-decoration-none primary-color fw-bold">
+            <span> GitHub </span>
+          </a>
+        </h5>
       </div>
+    </div>
+    <div
+      class="copyrights d-flex align-items-center justify-content-center bg-light"
+    >
+      <p>تصميم وبرمجة <span>Muhammad Nour</span></p>
     </div>
     <script src="./assets/js/app.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
