Zakat App JavaScript Beginner

--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,8 @@
               class="font-weight-bold text-dark"
               id="sendNumber"
             ></th>
-            <td class="font-weight-bold" style="font-size: 15px">2.5%</td>
-            <td class="text-danger font-weight-bold" id="amount"></td>
+            <td class="" style="font-size: 15px">2.5%</td>
+            <td class="fw-bold" id="amount"></td>
           </tr>
         </tbody>
       </table>
@@ -88,7 +88,10 @@
       >
         <h5>
           المشروع مفتوح المصدر ويمكنك الإطلاع عليه من على
-          <a href="" class="text-decoration-none primary-color fw-bold">
+          <a
+            href="https://github.com/MuhCoder/"
+            class="text-decoration-none primary-color fw-bold"
+          >
             <span> GitHub </span>
           </a>
         </h5>
@@ -97,7 +100,12 @@
     <div
       class="copyrights d-flex align-items-center justify-content-center bg-light"
     >
-      <p>تصميم وبرمجة <span>Muhammad Nour</span></p>
+      <a
+        class="text-decoration-none primary-color"
+        href="https://github.com/MuhCoder/"
+      >
+        <p>تصميم وبرمجة <span>Muhammad Nour</span></p>
+      </a>
     </div>
     <script src="./assets/js/app.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
